Add Swagger docs route
